--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "postcss": "^8.4.6",
         "tailwindcss": "^3.1.0",
         "vite": "^2.9.14",
+        "vite-plugin-top-level-await": "^1.1.0",
         "vue": "^3.2.31"
     },
     "dependencies": {
